# ankihub_addon

./: .envrc.dev  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  NOTTORNEY_VERIFICATION.md  README.md  addon.json  anki-current.json  ankihub.code-workspace.dev  ankihub_container.code-workspace  ankihub_fixtures.json  ankiweb_description.html  conftest.py  justfile  mypy.ini  pyproject.toml  pytest-macos.ini  pytest.ini  run_tests.sh  setup.cfg
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  postCreate.sh  postStart.sh
.devcontainer/config/novnc/: index.html
.gemini/: config.yaml
.github/: dependabot.yml  pull_request_template.md  release-drafter-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/setup/: action.yml
.github/actions/setup-addon/: action.yml
.github/actions/setup_anki/: action.yml
.github/actions/setup_project/: action.yml
.github/actions/setup_system/: action.yml
.github/workflows/: Checks.yml  build_pr_env_addon.yml  ci-macos.yml  ci-static-checks.yml  ci.yml  claude.yml  create_release.yml  pytest-anki.yml  release-drafter.yml  release.yml  upload_to_ankiweb.yml  upload_to_s3.yml
.vscode.dist/: launch.json  tasks.json
ankihub/: __init__.py  addon_ankihub_client.py  addons.py  anki_logger.py  ankihub_client.py  auto_sync.py  auto_sync_setup.py  build_config.json  common_utils.py  config.json  config.md  config.py  constants.py  create_deck.py  db.py  db_migrations.py  db_utils.py  debug.py  deck_creation.py  deck_hierarchy.py  entry_point.py  error_reporting.py  errors.py  export.py  exporting.py  feature_flags.py  hooks.py  importing.py  manifest.json  media_download.py  media_sync.py  media_utils.py  meta.json  note_conflicts.py  note_conversion.py  note_deletion.py  notes_reset.py  nottorney_client.py  optional_tag_suggestions.py  private_config_migrations.py  (+17 more)
ankihub/ankihub_client/: __init__.py  ankihub_client.py  ankiweb_client.py  models.py
ankihub/db/: __init__.py  db.py  db_migrations.py  db_utils.py  exceptions.py  models.py  rw_lock.py  utils.py
ankihub/db/db_migrations/: db_migrations.py  models_v11.py
ankihub/django/: __init__.py
ankihub/errors/: __init__.py  error_reporting.py  errors.py
ankihub/extensions/: load_extension.js
ankihub/gui/: addons.py  anki_db_check.py  ankiweb.py  auto_sync.py  block_exam_dialog.py  browser.py  bulk_suggestion_summary_dialog.py  changes_require_full_sync_dialog.py  config_dialog.py  configure_deleted_notes_dialog.py  custom_columns.py  custom_search_nodes.py  db_check.py  deck_browser.py  deck_installation.py  deck_options.py  deck_options_dialog.py  deck_updater.py  deckbrowser.py  decks.py  decks_dialog.py  dialog_parent.py  editor.py  enable_fsrs_dialog.py  error_dialog.py  error_feedback.py  errors.py  exceptions.py  field_protection.py  flashcard_selector_dialog.py  intercom.py  js_message_handling.py  media_sync.py  menu.py  new_deck_subscriptions.py  nottorney_decks.py  nottorney_login.py  optimize_fsrs_dialog.py  optional_tag_suggestion_dialog.py  overlay_dialog.py  (+16 more)
ankihub/labs/: __init__.py
ankihub/logs/: README.md
ankihub/main/: block_exam_subdecks.py  deck_creation.py  deck_options.py  deck_unsubscribtion.py  exceptions.py  exporting.py  importing.py  media_utils.py  note_conversion.py  note_deletion.py  note_type_management.py  note_types.py  notetype_management.py  optional_tag_suggestions.py  reset_local_changes.py  review_counts.py  review_data.py  subdecks.py  suggestions.py  utils.py
ankihub/media_import/: .gitignore  LICENSE  README.md  __init__.py  dialog.py  google_api_key.py  importing.py  install_libs.py  manifest.json  requirements.txt  ui.py
ankihub/messages/: messages.py  request_error.html
ankihub/product_metrics_client/: __init__.py  models.py  product_metrics_client.py
ankihub/proto/: .gitignore
ankihub/resources/: _worker.sql-wasm.js  deleted_notes_from_anking_deck.json
ankihub/tests/: test_ankihub_client.py  test_integration.py  test_register_decks.py
ankihub/user_files/: README.md  userConfig.json
proto/: account.proto  magic_code.proto
proto/frontend/: account.proto
proto/user_backend/: account.proto  magic_code.proto
requirements/: base.txt  dev.txt
scripts/: build.py  calver.sh  create_tmp_anki_data_dir.py  ensure_data_dir.py  generate_manifest.py  google_api_obfuscate.py  install_uv.sh  protobuf_gen.py  release.sh  runanki.py  setup_addon_symlink.py  update_media_import.py  upload_to_ankiweb.py  utils.py
src/: __init__.py  test_sync.py
src/ankihub/: __init__.py  ankihub_client.py  config.json  config.py  constants.py  consts.py  dialog.py  entry_point.py  gui.py  main.py  manifest.json  meta.json  register_decks.py  service.py  sync.py  test.py  utils.py
src/tests/: conftest.py  test_sync.py
tests/: .test_durations  conftest.py  factories.py  fixtures.py  pytest.ini  test_client.py  test_integration.py  test_suggestion_dialog.py  test_unit.py
tests/addon/: approvaltests_config.json  conftest.py  pytest.ini  test_block_exam_dialog.py  test_block_exam_subdecks.py  test_integration.py  test_unit.py  test_utils.py
tests/cassettes/: test_client_login_and_signout.yaml  test_create_suggestions_in_bulk.yaml  test_download_deck.yaml  test_download_deck_with_progress.yaml
tests/client/: conftest.py  pytest.ini  test_client.py  test_product_metrics_client.py
tests/test_data/: ankihub.ankiaddon  deck_with_one_basic_note.csv  deck_with_one_basic_note_with_unicode_line_separator.csv  deck_with_one_basic_note_without_deleted_column.csv  deck_with_one_deleted_basic_note.csv  small.apkg  small.sqlite  small_ankihub.apkg  small_ankihub.txt  small_ankihub_note_types.json
tutorial/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tutorial/lib/: bridgecommand.ts  global.ts  main.ts  modal.ts  tutorial.css  tutorial.ts
tutorial/src/: main.ts  style.css
(+234 files in other folders)
