[project]
name = "ankihub_addon"
description = "AnkiHub add-on for Anki"
readme = "README.md"
requires-python = ">=3.9"
version = "2025.07.21.2"
dependencies = []

[tool.setuptools]
package-dir = { "ankihub_addon" = "ankihub" }

[dependency-groups]
production = [
  "aqt==25.7.5",
]
tests = [
  "aqt[qt5]==24.11",
]
old_anki_tests = [
  "aqt[qt5]==2.1.56",
]
dev = [
  "ruff",
  "mypy==1.17.0",
  "coverage==7.10.1",
  "pre-commit==2.20.0",
  "requests-mock==1.9.3",
  "types-requests==2.28.9",
  "urllib3==1.26.14",
  "typeguard==2.13.3",
  "vcrpy==4.2.0",
  "pytest==8.4.1",
  "pytest-vcr==1.0.2",
  "pytest-qt==4.5.0",
  "pytest-split==0.10.0",
  "pytest-mock==3.14.1",
  "pytest-cov==6.2.1",
  "pytest-env==1.1.5",
  "pytest-xvfb==2.0.0",
  "pytest-retry==1.7.0",
  "pytest-anki",
  "aqt[qt5]>=2.1.56",
  "factory-boy==3.3.3",
  "types-factory-boy==0.4.1",
  "faker==37.4.2",
  "approvaltests==15.0.0"
]
bundle = [
  "sentry_sdk==1.6.0",
  "tenacity==8.2.2",
  "structlog==24.1.0",
  "peewee==3.18.2",
  "mashumaro",
]

[tool.uv]
conflicts = [
    [
        { group = "production" },
        { group = "tests" },
    ],
    [
        { group = "production" },
        { group = "old_anki_tests" },
    ],
    [
        { group = "tests" },
        { group = "old_anki_tests" },
    ]
]

[tool.uv.sources]
pytest-anki = { git = "https://github.com/ankipalace/pytest-anki.git", branch = "main" }
mashumaro = { git = "https://github.com/AnkiHubSoftware/mashumaro.git", branch = "master" }

[tool.mypy]
files = ['ankihub', 'tests/addon', 'tests/client']

exclude = [
  'ankihub/media_import',
  'ankihub/media_export',
  'ankihub/gui/ankiaddonconfig',
  'ankihub/lib'
]

strict_optional = false

[[tool.mypy.overrides]]
module = 'ankihub.*'
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  'ankihub.media_import.*',
  'ankihub.media_export.*',
  'structlog.*',
  'mashumaro.*',
  'ankihub.gui.ankiaddonconfig.*',
  'sentry_sdk.*',
  'urllib3.*',
  'tenacity.*',
  'peewee.*',
]
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'anki._vendor.*'
ignore_missing_imports = true

[tool.ruff]
extend-exclude = ["lib", "media_import", "media_export", "ankihub/gui/ankiaddonconfig"]
line-length = 120
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E722", "E731", "E203", "E402"]

[tool.coverage.run]
source = ["ankihub"]
omit = ["ankihub/lib/**", "ankihub/media_export/**", "ankihub/media_import/**"]

[tool.coverage.paths]
source = ["./ankihub", "*/addons21/ankihub"]

[tool.coverage.html]
directory = "coverage_html_report"
show_contexts = true

[tool.coverage.report]
show_missing = true
skip_covered = true
