[project]
name = "ankihub_addon"
description = "AnkiHub add-on for Anki"
readme = "README.md"
requires-python = ">=3.9"
version = "2025.07.30.1"
dependencies = []

[tool.setuptools]
package-dir = { "ankihub_addon" = "ankihub" }

[dependency-groups]
production = [
  "aqt==25.7.5",
]
dev = [
  "ruff",
  "mypy==1.17.0",
  "coverage==6.5.0",
  "pre-commit==2.20.0",
  "requests-mock==1.9.3",
  "types-requests==2.28.9"
]

tests = [
  "aqt==25.7.5",
  "pyqt6==6.8.0",
  "pyqt6-webengine==6.8.0",
  "vcrpy==4.2.0",
  "pytest==8.2.2",
  "pytest-vcr==1.0.2",
  "pytest-qt==4.2.0",
  "pytest-split==0.10.0",
  "pytest-mock==3.12.0",
  "pytest-cov==4.0.0",
  "pytest-env==0.6.2",
  "pytest-xvfb==2.0.0",
  "pytest-retry==1.6.3",
  "pytest-anki",
  "factory-boy==3.2.1",
  "types-factory-boy==0.3.1",
  "faker==19.12.0",
  "approvaltests==12.2.0",
  "setuptools>=80.9.0",
]
ankiweb = [
  "webbot",
  "webdriver_manager==4.0.2",
  "selenium==3.141.0",
  "urllib3==1.26.14",
]
bundle = [
  "sentry_sdk==1.6.0",
  "tenacity==8.2.2",
  "structlog==24.1.0",
  "peewee==3.18.2",
  "mashumaro",
]

[tool.uv]
conflicts = [
    [
        { group = "production" },
        { group = "tests" },
    ],

]

[tool.uv.sources]
pytest-anki = { git = "https://github.com/ankipalace/pytest-anki.git", branch = "anki-25" }
mashumaro = { git = "https://github.com/AnkiHubSoftware/mashumaro.git", branch = "master" }
webbot = { git = "https://github.com/nateshmbhat/webbot", rev = "333f51840cd5a1fcde0b014bd6ab401d51e62860" }

[tool.mypy]
files = ['ankihub', 'tests/addon', 'tests/client']

exclude = [
  'ankihub/media_import',
  'ankihub/media_export',
  'ankihub/gui/ankiaddonconfig',
  'ankihub/lib'
]

strict_optional = false

[[tool.mypy.overrides]]
module = 'ankihub.*'
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  'ankihub.media_import.*',
  'ankihub.media_export.*',
  'structlog.*',
  'mashumaro.*',
  'ankihub.gui.ankiaddonconfig.*',
  'sentry_sdk.*',
  'urllib3.*',
  'tenacity.*',
  'peewee.*',
]
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'anki._vendor.*'
ignore_missing_imports = true

[tool.ruff]
extend-exclude = ["lib", "media_import", "media_export", "ankihub/gui/ankiaddonconfig"]
line-length = 120
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E722", "E731", "E203", "E402"]

[tool.coverage.run]
source = ["ankihub"]
omit = ["ankihub/lib/**", "ankihub/media_export/**", "ankihub/media_import/**"]

[tool.coverage.paths]
source = ["./ankihub", "*/addons21/ankihub"]

[tool.coverage.html]
directory = "coverage_html_report"
show_contexts = true

[tool.coverage.report]
show_missing = true
skip_covered = true
