[project]
name = "ankihub_addon"
description = "AnkiHub add-on for Anki"
readme = "README.md"
requires-python = ">=3.9"
version = "2025.09.17.1"
dependencies = []

[tool.setuptools]
package-dir = { "ankihub_addon" = "ankihub" }

[dependency-groups]
dev = [
  "approvaltests>=12.2.0",
  "coverage>=6.5.0",
  "factory-boy>=3.2.1",
  "faker>=19.12.0",
  "mypy>=1.18.2",
  "pre-commit>=2.20.0",
  "pytest>=8.2.2",
  "pytest-anki",
  "pytest-cov>=4.0.0",
  "pytest-env>=0.6.2",
  "pytest-mock>=3.12.0",
  "pytest-qt>=4.2.0",
  "pytest-retry>=1.6.3",
  "pytest-split>=0.9.0",
  "pytest-vcr>=1.0.2",
  "requests-mock>=1.9.3",
  "ruff>=0.14.0",
  "typeguard>=2.13.3",
  "types-factory-boy>=0.3.1",
  "types-requests>=2.28.9",
  "urllib3>=1.26.14,<2",
  "vcrpy>=4.2.0",
]
bundle = [
  "sentry_sdk==1.6.0",
  "tenacity==8.2.2",
  "structlog==24.1.0",
  "peewee==3.18.2",
  "mashumaro",
]
aqt = ["aqt[qt]==25.9.2"]
aqt_legacy = ["aqt==2.1.56", "pyqt5==5.15.2", "pyqtwebengine==5.15.2"]

[tool.uv]
conflicts = [
    [
      { group = "aqt" },
      { group = "aqt_legacy" },
    ],
]

[tool.uv.sources]
pytest-anki = { git = "https://github.com/ankipalace/pytest-anki.git", branch = "anki-25" }
mashumaro = { git = "https://github.com/AnkiHubSoftware/mashumaro.git", branch = "master" }

[tool.mypy]
files = ['ankihub', 'tests/addon', 'tests/client']

exclude = [
  'ankihub/media_import',
  'ankihub/media_export',
  'ankihub/gui/ankiaddonconfig',
  'ankihub/lib'
]

no_strict_optional = true

[[tool.mypy.overrides]]
module = 'ankihub.*'
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  'ankihub.media_import.*',
  'ankihub.media_export.*',
  'structlog.*',
  'mashumaro.*',
  'ankihub.gui.ankiaddonconfig.*',
  'sentry_sdk.*',
  'urllib3.*',
  'tenacity.*',
  'peewee.*',
]
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'anki._vendor.*'
ignore_missing_imports = true

[tool.ruff]
extend-exclude = ["lib", "media_import", "media_export", "ankihub/gui/ankiaddonconfig"]
line-length = 120
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E722", "E731", "E203", "E402"]

[tool.coverage.run]
source = ["ankihub"]
omit = ["ankihub/lib/**", "ankihub/media_export/**", "ankihub/media_import/**"]

[tool.coverage.paths]
source = ["./ankihub", "*/addons21/ankihub"]

[tool.coverage.html]
directory = "coverage_html_report"
show_contexts = true

[tool.coverage.report]
show_missing = true
skip_covered = true
